--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
 	<!-- your app's js -->
 	<script src="js/app.js"></script>
 	<script src="js/mapCtrl.js"></script>
+	<script src="js/dataCollectionService.js"></script>
   </head>
   <body>
   <ion-nav-bar class="bar-positive" align-title="center">
